# LDS_Stake_Website-Template

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  Makefile  README.md  datatypes.d2  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  speaking_schedule.csv.example  wards.csv  wards.csv.example  wards.txt.example
backend/migrations/: README  env.py
backend/migrations/versions/: 279b3b9fc73c_ward.py  36977e076577_calling_kanban.py  4779cfc6cc09_add_sessions.py  4f56f0685188_initial_migration.py  52a3bd027c48_add_temple_recommend_appointment_tables.py  594f602a3097_add_location_to_ward.py  6485b4767492_phase3_reschedule_reminder_fields.py  65974fd3382a_add_recurrence_to_availability_exception.py  74ad0abe6025_add_site_settings_table.py  8537f4709359_initial_migration.py  a1b2c3d4e5f6_add_display_group_order_to_calling.py  b2c3d4e5f6a1_lock_slots_and_rename_callings.py  c3d4e5f6a1b2_add_group_order_to_calling.py  cb1e4fd71072_add_presidency_assignment_table.py  e400ea3164f4_add_calling_and_permissions.py  e45a10b5084e_add_building_reservation_table.py
backend/src/: __init__.py  app.py  logging_config.py
backend/src/db/: __init__.py  orm.py
backend/src/models/: __init__.py  assignment.py  base.py  building_reservation.py  calendar.py  calling.py  calling_kanban.py  permissions.py  presidency_assignment.py  site_settings.py  (+5 more)
discordbot/: .dockerignore  .env.example  Dockerfile  README.md  main.py  plan.md  pyproject.toml
discordbot/src/: app.py  bot.py  logging_config.py
(+330 files in other folders)
