[project]
name = "lds_stake_backend"
version = "0.1.0"
description = "Backend for LDS Stake Website Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.95.0",
	"uvicorn[standard]>=0.22.0",
	"python-dotenv>=1.0.0",
	"rich>=13.0.0",
	"sqlmodel>=0.0.31",
	"alembic>=1.18.1",
	"passlib[argon2]>=1.7.4",
	"pyjwt>=2.10.1",
	"python-multipart>=0.0.21",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
