[project]
name = "discordbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.7.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pandoc>=2.4",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]
